# mc_cli

./: Cargo.toml  NOTICE  TODO
a/: fabric-server-launcher.properties
src/: app.rs  assets.rs  auth.rs  fabric.rs  liteloader.rs  main.rs  mem.rs  rules.rs  util.rs  vanilla.rs  version.rs
