[package]
name = "mc_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
dotenv = "0.15.0"
indicatif = "0.17.11"
jars = "0.1.1"
minecraft-msa-auth = "0.4.0"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
sys-info = "0.9.1"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread"] }
webbrowser = "1.0.4"
